tests/fixtures/negative/empty-blocks/EmptyDoWhileBlock.kt
package fixtures.negative.emptyblocks

fun countUp() {
    var count = 0
    do {
        count++
    } while (count < 10)
}
